2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	Clean up Solaris code.
	* s/sol2-6.h (LD_SWITCH_SYSTEM_TEMACS, C_SWITCH_X_SYSTEM)
	(LIB_MOTIF): Remove, configure takes care of this.
	(NOT_USING_MOTIF): Remove, unused.
	* xrdb.c: Remove #if 0-ed #include.
	(SYSV): Remove conditional for old SysV.
	* sysdep.c (closedir): Remove conditional code for Solaris,
	Solaris has closedir.

2010-04-22  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (read_and_apply_settings): Check if current_font is
	NULL before strcmp (Bug#6001).

2010-04-21  Dan Nicolaescu  <dann@ics.uci.edu>

	Clean up HP-UX files.
	* m/hp800.h (NO_REMAP, VIRT_ADDR_VARIES, DATA_SEG_BITS)
	(DATA_START, TEXT_START, LOAD_AVE_TYPE, LOAD_AVE_CVT)
	(LDAV_SYMBOL, index, rindex): Move definitions only used in HP-UX ...
	* s/hpux10-20.h: ... to the only user, here.

2010-04-21  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_find_paragraph_start, bidi_at_paragraph_end): Don't
	use buffer-local values of paragraph-start and paragraph-separate.
	<paragraph_start_re, paragraph_separate_re>: Rename from
	fallback_paragraph_start_re and fallback_paragraph_separate_re.
	(Bug#5992)

2010-04-21  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c: Qmonospace_font_name, Qtool_bar_style and
	current_tool_bar_style are new.
	(store_config_changed_event): Rename from store_font_changed_event.
	(XSETTINGS_TOOL_BAR_STYLE): New define.
	(SEEN_FONT, SEEN_TB_STYLE): New enum values.
	(struct xsettings): Add font and tb_style, set xft stuff inside #ifdef
	HAVE_XFT.
	(something_changedCB): store_font_changed_event is now
	store_config_changed_event
	(parse_settings): Rename from parse_xft_settings.  Read
	non-xft xsettings outside #ifdef HAVE_XFT.
	(read_settings): Renamed from read_xft_settings.
	(apply_xft_settings): Take current settings as parameter.  Do not
	call read_(xft)_settings.
	(read_and_apply_settings): New function.
	(xft_settings_event): Do non-xft stuff out of HAVE_XFT.  Call